Améliorations SEO, balise vidéo et responsive

--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Description de la page -->
+  <meta>meta name="description" content="Site officiel du tournoi GroupUfoot - événements, galeries, infos et plus encore.">
+  <meta name="keywords" content="football, GroupUfoot, tournoi, Côte d'Ivoire, sport, galerie, jeunes talents">
+  <meta name="author" content="GROUPUFOOT">
+  <!-- Pour les réseaux sociaux (Open Graph) -->
+  <meta property="og:title" content="GroupUfoot - Le tournoi de football officiel">
+  <meta property="og:description" content="Découvrez les éditions du tournoi, les photos, vidéos et les infos clés.">
+  <meta property="og:image" content="https://groupufoot.com/img/logo.png">
+  <meta property="og:url" content="https://groupufoot.com">
+  <meta property="og:type" content="website">
   <title> SITE OFFICIEL GROUPUFOOT</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
