Améliorations SEO, balise vidéo et responsive

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Description de la page -->
-  <meta>meta name="description" content="Site officiel du tournoi GroupUfoot - événements, galeries, infos et plus encore.">
+  <meta name="description" content="Site officiel du tournoi GroupUfoot - événements, galeries, infos et plus encore.">
   <meta name="keywords" content="football, GroupUfoot, tournoi, Côte d'Ivoire, sport, galerie, jeunes talents">
-  <meta name="author" content="GROUPUFOOT">
+  <meta name="author" content="Yohann Axel KOUAKOU">
   <!-- Pour les réseaux sociaux (Open Graph) -->
   <meta property="og:title" content="GroupUfoot - Le tournoi de football officiel">
   <meta property="og:description" content="Découvrez les éditions du tournoi, les photos, vidéos et les infos clés.">
