--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Description de la page -->
-  <meta name="description" content="Site officiel du tournoi GroupUfoot - événements, galeries, infos et plus encore.">
-  <meta name="keywords" content="football, GroupUfoot, tournoi, Côte d'Ivoire, sport, galerie, jeunes talents">
+  <meta name="description" content="Site officiel du tournoi de football GroupUfoot en Côte d'Ivoire. Découvrez les événements, galeries photos et infos clés.">
+  <meta name="keywords" content="football, GroupUfoot, tournoi, Côte d'Ivoire, sport, jeunes talents">
   <meta name="author" content="Yohann Axel KOUAKOU">
-  <!-- Pour les réseaux sociaux (Open Graph) -->
-  <meta property="og:title" content="GroupUfoot - Le tournoi de football officiel">
-  <meta property="og:description" content="Découvrez les éditions du tournoi, les photos, vidéos et les infos clés.">
+  <meta property="og:title" content="GroupUfoot - Tournoi de Football Officiel en Côte d'Ivoire">
+  <meta property="og:description" content="Suivez les éditions du tournoi, photos, vidéos, et infos clés du GroupUfoot.">
   <meta property="og:image" content="https://groupufoot.com/img/logo.png">
   <meta property="og:url" content="https://groupufoot.com">
   <meta property="og:type" content="website">
-  <title> SITE OFFICIEL GROUPUFOOT</title>
+  <link rel="canonical" href="https://groupufoot.com/">
+  <link rel="icon" href="img/logo.png" type="image/png">
+  <title>GroupUfoot - Tournoi de Football Officiel en Côte d'Ivoire</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
