Optimisation SEO + Canonical + Favicon

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <title>GroupUfoot - Tournoi de Football Officiel en Côte d'Ivoire</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="icon" href="img/logo.png" type="image/png">
 </head>
 <body>
   <!-- Header -->
