Optimisation des images

--- a/index.html
+++ b/index.html
@@ -121,21 +121,21 @@
 
     <div class="actualite-card">
       <a href="https://africafoot.com/5-talents-africains-qui-font-sensation-a-la-can-u17/" target="_blank">
-        <img src="img/images-2.jpeg" alt="Talents africains">
+        <img src="img/images-2.jpeg" alt="Talents africains" width="150" height="150" loading="lazy">
         <h3>Top 5 des jeunes talents africains à suivre</h3>
       </a>
     </div>
 
     <div class="actualite-card">
       <a href="https://www.cafonline.com/fr/coupe-dafrique-des-nations-u-17/news/can-u17-le-maroc-enfin-roi/" target="_blank">
-        <img src="img/images-5.jpeg" alt="CAN U17 2025">
+        <img src="img/images-5.jpeg" alt="CAN U17 2025" width="150" height="150" loading="lazy">
         <h3>Le Maroc, grand finaliste de la CAN U17 2025</h3>
       </a>
     </div>
 
     <div class="actualite-card">
       <a href="https://cinews.ci/fif-les-arbitres-en-formation-pour-larrivee-de-la-var-en-2025/" target="_blank">
-        <img src="img/images-6.jpeg" alt="Arbitrages africains">
+        <img src="img/images-6.jpeg" alt="Arbitrages africains" width="150" height="150" loading="lazy">
         <h3>Arbitrage africain : vers une révolution en 2025</h3>
       </a>
     </div>
@@ -151,20 +151,20 @@
   
     <div class="contact-info">
       <div class="contact-item">
-        <img src="https://img.icons8.com/ios-filled/50/000000/email.png" alt="Email Icon" />
+        <img src="https://img.icons8.com/ios-filled/50/000000/email.png" alt="Email Icon" width="150" height="150" loading="lazy"/>
         <span>groupufoot@gmail.com</span>
       </div>
       <div class="contact-item">
-        <img src="https://img.icons8.com/ios-filled/50/000000/phone.png" alt="Phone Icon" />
+        <img src="https://img.icons8.com/ios-filled/50/000000/phone.png" alt="Phone Icon" width="150" height="150" loading="lazy"/>
         <span>+225 07 03 23 19 48</span>
       </div>
       <!-- Ajout des icônes WhatsApp et Facebook -->
       <div class="contact-item">
         <a href="https://wa.me/2250703231948" target="_blank">
-          <img src="https://img.icons8.com/ios-filled/50/000000/whatsapp.png" alt="WhatsApp Icon" />
+          <img src="https://img.icons8.com/ios-filled/50/000000/whatsapp.png" alt="WhatsApp Icon" width="150" height="150" loading="lazy"/>
         </a>
         <a href="https://www.tiktok.com/@interquartier?_t=ZM-8vvPCTlohs5&_r=1" target="_blank">
-          <img src="https://img.icons8.com/ios-filled/50/000000/tiktok--v1.png" alt="Tiktok Icon" />
+          <img src="https://img.icons8.com/ios-filled/50/000000/tiktok--v1.png" alt="Tiktok Icon" width="150" height="150" loading="lazy"/>
         </a>        
       </div>
     </div>
