--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </header>
 
   <!-- Accueil Section -->
-  <section id="accueil" class="section-accueil"><br>
+  <section id="accueil" class="section-accueil"><br><br><br>
     <h1>Le sport, une passion qui nous unit</h1>
     <p>GROUP UFOOT : révélateur de talents et bâtisseur d'espoirs à travers le football.</p>
     <a href="#programme" class="btn">Voir le programme</a>
