Mise à jour index.html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
     <div class="galerie-case">
       <h3>Deuxième Édition</h3>
-      <img src="images/deuxieme-edition.jpg" alt="Deuxième Édition">
+      <img src="img/photo_2025-05-20_14-16-54.jpg" alt="Deuxième Édition">
       <a href="galerie2edition.html" class="bouton">Voir les photos</a>
     </div>
   </div>
