--- a/galerie1edition.html
+++ b/galerie1edition.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Première Édition - GROUP UFOOT</title>
+  <meta name="description" content="Site officiel du tournoi de football GroupUfoot en Côte d'Ivoire. Découvrez les événements, galeries photos et infos clés.">
   <link rel="stylesheet" href="style2.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
