Mise à jour index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
     <br>
     <br>
     <br>
-    <a href="#programme" class="btn">Voir le programme</a>
+    <br>
+    <a href="#programme" class="btn">Voir le programme</a><br>
   </section>
   <br>
   <!-- À propos Section -->
