Mise à jour index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta property="og:image" content="https://groupufoot.com/img/logo.png">
   <meta property="og:url" content="https://groupufoot.com">
   <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Group UFoot" />
   <link rel="canonical" href="https://groupufoot.com/">
   <link rel="icon" href="img/logo.png" type="image/png">
   <title>GroupUfoot - Tournoi de Football Officiel en Côte d'Ivoire</title>
